--- a/springit/src/main/resources/templates/link/view.html
+++ b/springit/src/main/resources/templates/link/view.html
@@ -29,7 +29,7 @@
                 </p>
                 <p class="tagline ">submitted
                     <time th:title="${link.getCreationDate()}" th:datetime="${link.getCreationDate()}" class="live-timestamp">2 hours ago</time> by
-                    <a href="https://www.reddit.com/user/therealdanvega" class="author">therealdanvega</a>
+                    <a href="/" class="author" th:text="${link.createdBy}">therealdanvega</a>
                     <span class="userattrs"></span>
                 </p>
                 <p> <a th:href="${link.url}" th:text="${link.url}" target ="_blank"> </a> </p>
